增加 Assistant 更新 更新 Doc
